[metadata]
name = crjbsim
description = Python simulation utilities.
long_description_content_type = text/markdown
url = https://github.com/Spycho/crjbsim
project_urls =
    Bug Tracker = https://github.com/Spycho/crjbsim/issues
    Changelog = https://github.com/Spycho/crjbsim/releases
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
